force-app/main/default/objects/quotaGageSettings__c/quotaGageSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for how the Quota gauge calculates and renders on the home screen dashboard</description>
    <label>Quota Gauge Settings</label>
</CustomObject>