force-app/main/default/objects/quotaGageSettings__c/fields/Gauge_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Max_Value__c</fullName>
    <defaultValue>150</defaultValue>
    <description>Maximum % to chart on the Gauge. Default value is 150%.</description>
    <inlineHelpText>Maximum % to chart on the Gauge. Default value is 150%.</inlineHelpText>
    <label>Gauge Max Value</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>