force-app/main/default/objects/quotaGageSettings__c/fields/Orange_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Orange_Upper_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum % on the gauge which renders ORANGE. Default value is 50%</description>
    <inlineHelpText>Maximum % on the gauge which renders ORANGE. Default value is 50%</inlineHelpText>
    <label>Orange Upper Limit</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>