force-app/main/default/objects/quotaGageSettings__c/fields/Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Amount__c</fullName>
    <defaultValue>218000000</defaultValue>
    <description>Dollar amount used as a monthly goal for the 100% mark on the gauge.</description>
    <inlineHelpText>Dollar amount used as a monthly goal for the 100% mark on the gauge. The Closed/Won Target (Monthly)</inlineHelpText>
    <label>Quota Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>