force-app/main/default/objects/quotaGageSettings__c/fields/Red_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Red_Upper_Limit__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Maximum % on the gauge which renders RED. Default value is 25%</description>
    <inlineHelpText>Maximum % on the gauge which renders RED. Default value is 25%</inlineHelpText>
    <label>Red Upper Limit</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>