force-app/main/default/objects/quotaGageSettings__c/fields/Static_Funnel_Addition_Target__c.field-meta.xml
<CustomField>
    <fullName>Static_Funnel_Addition_Target__c</fullName>
    <defaultValue>1500000.00</defaultValue>
    <description>When the &apos;Use Calculated Funnel Addition Target&apos; checkbox is disabled, this value will be used for all users with the appropriate Role/Profile when generating Funnel Addition Target data for a given period.</description>
    <inlineHelpText>When the &apos;Use Calculated Funnel Addition Target&apos; checkbox is disabled, this value will be used for all users with the appropriate Role/Profile when generating Funnel Addition Target data for a given period.</inlineHelpText>
    <label>Static Funnel Addition Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>