force-app/main/default/objects/quotaGageSettings__c/fields/Static_New_Product_Target__c.field-meta.xml
<CustomField>
    <fullName>Static_New_Product_Target__c</fullName>
    <label>Static New Product Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>