force-app/main/default/objects/quotaGageSettings__c/fields/Use_Calculated_Funnel_Addition_Target__c.field-meta.xml
<CustomField>
    <fullName>Use_Calculated_Funnel_Addition_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this causes Funnel Addition Target to become a calculation based on Commit Case Accuracy for the previous period and Quota Amount</description>
    <inlineHelpText>Enabling this causes Funnel Addition Target to become a calculation based on Commit Case Accuracy for the previous period and Quota Amount</inlineHelpText>
    <label>Use Calculated Funnel Addition Target</label>
    <type>Checkbox</type>
</CustomField>