force-app/main/default/objects/quotaGageSettings__c/fields/Yellow_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Yellow_Upper_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum % on the gauge which renders YELLOW. Default value is 75%</description>
    <inlineHelpText>Maximum % on the gauge which renders YELLOW. Default value is 75%</inlineHelpText>
    <label>Yellow Upper Limit</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>